[gd_scene load_steps=11 format=2]

[ext_resource path="res://ui/left-arrow.png" type="Texture" id=1]
[ext_resource path="res://ui/right-arrow.png" type="Texture" id=2]
[ext_resource path="res://ui/question.png" type="Texture" id=3]
[ext_resource path="res://ui/painel_perguntas.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
resource_name = "in"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 0.189465, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "out"
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.189465, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="InputEventAction" id=3]
action = "alt_a"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="InputEventAction" id=5]
action = "alt_b"

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[node name="PainelPerguntas" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="_anim" type="AnimationPlayer" parent="."]
anims/in = SubResource( 1 )
anims/out = SubResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.56
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_left = 0.03
anchor_top = 0.03
anchor_right = 0.97
anchor_bottom = 0.97
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer"]
margin_right = 423.0
margin_bottom = 564.0

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/ScrollContainer"]
margin_right = 423.0
margin_bottom = 564.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/ScrollContainer/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 407.0
margin_bottom = 548.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer"]
margin_right = 391.0
margin_bottom = 264.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LaP" type="Label" parent="Panel/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 307.0
margin_bottom = 264.0
size_flags_horizontal = 7
size_flags_vertical = 5
text = "aqui vai o texto da pergunta"
align = 3
valign = 1
autowrap = true

[node name="TextureRect" type="TextureRect" parent="Panel/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 311.0
margin_right = 391.0
margin_bottom = 264.0
size_flags_vertical = 5
texture = ExtResource( 3 )
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 268.0
margin_right = 391.0
margin_bottom = 532.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 18

[node name="Button" type="Button" parent="Panel/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 391.0
margin_bottom = 123.0
focus_next = NodePath("../Button2")
focus_previous = NodePath("../Button2")
size_flags_vertical = 3
action_mode = 0
keep_pressed_outside = true
shortcut = SubResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/Button"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Panel/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/Button/HBoxContainer"]
margin_top = 21.0
margin_right = 80.0
margin_bottom = 101.0
size_flags_vertical = 4
texture = ExtResource( 1 )
stretch_mode = 4

[node name="LaAltA" type="Label" parent="Panel/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/Button/HBoxContainer"]
margin_left = 84.0
margin_right = 391.0
margin_bottom = 123.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "aqui vai o texto da alternativa a"
align = 3
valign = 1
autowrap = true

[node name="Button2" type="Button" parent="Panel/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 141.0
margin_right = 391.0
margin_bottom = 264.0
focus_next = NodePath("../Button")
focus_previous = NodePath("../Button")
size_flags_vertical = 3
action_mode = 0
keep_pressed_outside = true
shortcut = SubResource( 6 )

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/Button2"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Panel/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/Button2/HBoxContainer2"]
margin_right = 80.0
margin_bottom = 123.0
size_flags_horizontal = 0
size_flags_vertical = 5
texture = ExtResource( 2 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LaAltB" type="Label" parent="Panel/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/Button2/HBoxContainer2"]
margin_left = 84.0
margin_right = 391.0
margin_bottom = 123.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "aqui vai o texto da alternativa a"
align = 3
valign = 1
autowrap = true
[connection signal="pressed" from="Panel/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
